# ascendancy

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
client/src/camera/: mod.rs  systems.rs
client/src/map/: mod.rs  systems.rs
client/src/map/render/: mod.rs  systems.rs
client/src/netcode/: mod.rs  network_handler.rs  network_message_handler.rs  systems.rs
client/src/player/: events.rs  mod.rs  systems.rs
client/src/player/render/: assets.rs  mod.rs  systems.rs
client/src/state/: mod.rs  systems.rs
server/: Cargo.toml
server/src/: main.rs
server/src/map/: mod.rs  systems.rs
server/src/netcode/: components.rs  events.rs  mod.rs  network_handler.rs  network_message_handler.rs  systems.rs
server/src/player/: events.rs  mod.rs  systems.rs
server/src/state/: mod.rs  resources.rs  state.rs  systems.rs
server/src/states/: mod.rs  systems.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs  shared.rs
src/client/: mod.rs
src/client/camera/: mod.rs  systems.rs
src/client/map/: mod.rs
src/client/map/render/: assets.rs  mod.rs  systems.rs
src/client/player/: mod.rs  systems.rs
src/client/player/render/: mod.rs  systems.rs
src/server/: mod.rs
src/server/map/: mod.rs  resources.rs  systems.rs
src/server/player/: mod.rs  systems.rs
