[workspace]
members = ["client", "server", "shared"]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"]}
bevy_renet = { version = "1.0.0"}
uuid = {version = "1.16.0", features = ["v4"]}
bincode = "2.0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
