[workspace]
members = ["client", "server", "shared"]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.15.3"}
bevy_renet = { version = "1.0.0"}
bincode = "2.0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false